<resources>
    <string name="app_name">IoT</string>
    <string name="nombre">Nombre</string>
    <string name="contrase_a">Contraseña\n</string>
    <string name="correo_electr_nico">Correo Electronico</string>
    <string name="registrarse">Registrarse</string>
    <string name="botonelectri">Monitoreo de Consumo Electrico</string>
    <string name="botondomotica">Control de Automatización Domótica</string>
    <string name="restablecer">Restablecer</string>
    <string name="desc1" />
    <string name="titView6">Control Remoto</string>
    <string name="view6Subt1">Control de luces</string>
    <string name="on_off">ON/OFF\n</string>
    <string name="view6Subt2">Control de cerraduras</string>
    <string name="desc2">desc2</string>
    <string name="lock_unlock">LOCK/UNLOCK</string>
    <string name="pagina_principal">Pagina principal</string>
    <string name="atras">atras</string>
    <string name="monitoreo_de_consumo_el_ctrico">Monitoreo de consumo eléctrico</string>
    <string name="consumoelectrico">consumoElectrico</string>
    <string name="consumo_actual_0_kwh">Consumo Actual: 0 kWh</string>
    <string name="costoaprox">costoAprox</string>
    <string name="costo_aproximado_0_00">Costo Aproximado: $0.00</string>
    <string name="costeenergia">costeEnergia</string>
    <string name="horas_de_uso_0">Horas de uso: 0</string>
    <string name="volver_a_dashboard">Volver a dashboard</string>
    <string name="ver_consumo_el_ctrico">Ver Consumo Eléctrico</string>
    <string name="actualizar_usuario">Actualizar Correo Electronico</string>
    <string name="nuevo_usuario">Nuevo Correo Electronico</string>
    <string name="actualizar_usuariobtn">Actualizar Correo Electronico</string>
    <string name="volver_al_login">Volver al Dashboard</string>
    <string name="volver_al_men_anterior">volver al menú anterior</string>
    <string name="opciones_de_cuenta">Opciones de Cuenta</string>
    <string name="actualizar_usuarioop">Actualizar Correo Electronico</string>
    <string name="actualizar_contrase_a">Actualizar Contraseña</string>
    <string name="eliminar_cuenta">Eliminar Cuenta</string>
    <string name="nombre_de_usuario">Correo Electronico</string>
    <string name="usuario">Correo Electronico</string>
    <string name="contrase_a_anterior">Contraseña Anterior</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
    <string name="usuario_anterior">Correo Electronico Anterior</string>
    <string name="inicio_de_sei_n">Inicio de sesión</string>
    <string name="icono">icono</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="volver">volver</string>
    <string name="tips">Tips</string>
    <string name="analisis">Analisis</string>
    <string name="controles">Controles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tips_de_eficiencia_energ_tica">Tips de eficiencia Energética</string>
    <string name="usa_bombillas_led_son_m_s_eficientes_y_duran_m_s">Usa bombillas LED, son más eficientes y duran más.</string>
    <string name="aprovecha_la_luz_natural_durante_el_d_a_para_reducir_el_uso_de_luces">Aprovecha la luz natural durante el día para reducir el uso de luces.</string>
    <string name="desconecta_los_aparatos_el_ctricos_que_no_uses_para_reducir_el_consumo_fantasma">Desconecta los aparatos eléctricos que no uses para reducir el consumo fantasma.</string>
    <string name="cerrar_sesi_n">cerrar Sesión</string>
    <string name="ir_a_la_app">Ir a la APP</string>
    <string name="luz">luz</string>
    <string name="atr_s">atras</string>

</resources>