<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:background="@drawable/login_background"
    >

    <TextView
        android:id="@+id/tituloActualizarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actualizar_usuario"
        android:textSize="32sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

    <EditText
        android:id="@+id/inputUsuarioAnterior"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/usuario_anterior"
        android:backgroundTint="@color/azul"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tituloActualizarUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:padding="12dp" />

    <EditText
        android:id="@+id/inputNuevoUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nuevo_usuario"
        android:backgroundTint="@color/azul"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/inputUsuarioAnterior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:padding="12dp" />

    <EditText
        android:id="@+id/input_contrasena"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:backgroundTint="@color/azul"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputUsuarioAnterior" />

    <Button
        android:id="@+id/btnActualizarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/azul"
        android:text="@string/actualizar_usuariobtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputNuevoUsuario" />

    <Button
        android:id="@+id/btnVolverLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver_al_men_anterior"
        android:backgroundTint="@color/azul"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>