<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:background="@drawable/login_background"
    tools:context="ActualizarPassword"
    >

    <TextView
        android:id="@+id/tituloActualizarPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actualizar_contrase_a"
        android:textSize="32sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

    <EditText
        android:id="@+id/inputUsuarioPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:backgroundTint="@color/azul"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/tituloActualizarPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:padding="12dp" />

    <EditText
        android:id="@+id/inputPasswordAnterior"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/contrase_a_anterior"
        android:backgroundTint="@color/azul"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/inputUsuarioPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:padding="12dp" />

    <EditText
        android:id="@+id/inputNuevaPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nueva_contrase_a"
        android:backgroundTint="@color/azul"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/inputPasswordAnterior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:padding="12dp" />

    <Button
        android:id="@+id/btnActualizarPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actualizar_contrase_a"
        android:backgroundTint="@color/azul"
        app:layout_constraintTop_toBottomOf="@id/inputNuevaPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/btnVolverLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver_al_men_anterior"
        android:backgroundTint="@color/azul"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>