<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vistas.AnalisisFragment"
    android:id="@+id/consumo"
    android:background="@drawable/login_background">

    <!--
    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/monitoreo_de_consumo_el_ctrico"
        android:textSize="28sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        />-->

    <ImageView
        android:id="@+id/imgConsumo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:contentDescription="@string/consumoelectrico"
        android:src="@drawable/energia_consumo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="50dp"/>

    <TextView
        android:id="@+id/consumo_actual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/consumo_actual_0_kwh"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgConsumo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:contentDescription="@string/costoaprox"
        android:src="@drawable/energia_coste1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consumo_actual"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/costo_aproximado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/costo_aproximado_0_00"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/energHoras"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:contentDescription="@string/costeenergia"
        android:src="@drawable/energia_tiempo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/costo_aproximado"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/horas_uso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/horas_de_uso_0"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/energHoras" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:max="100"
        android:progressDrawable="@drawable/barra"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@id/horas_uso" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <!--
        <Button
            android:id="@+id/btnHome"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volver_a_dashboard"
            android:backgroundTint="@color/azul"
            android:textColor="@color/white"
            android:layout_marginEnd="16dp"
            android:paddingHorizontal="20dp" />-->

        <Button
            android:id="@+id/btnConsumo"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/azul"
            android:paddingHorizontal="20dp"
            android:text="@string/ver_consumo_el_ctrico"
            android:textColor="@android:color/white" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>